--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
     </div>
 
     <div class="botao" onclick="finalizarPedido()">Finalizar pedido</div>
+    <footer>
+        <p>Direitos - 1º Evento tech da Driven</p>
+    </footer>
 
     <script src="js/index.js"></script>
 </body>
